[tool.poetry]
name = "ZTO"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>", "Karol Górzański"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.5.3"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
