[tool.poetry]
name = "ZTO"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>", "Karol Górzański"]

[tool.poetry.dependencies]
python = "^3.9.4"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
docplex = "^2.20.204"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
